// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page renders empty page 1`] = `
<v-container fluid="">
    <div class="toolbox">
        <v-btn fab="" small="" class="green"></v-btn>
        <v-btn fab="" small="" class="red "></v-btn>
        <v-btn fab="" small="" class="black mr-3"></v-btn>
        <v-btn fab="" color="accent">
            <v-icon dark="" class="flipy">call_made</v-icon>
        </v-btn>
        <v-btn fab="" color="accent">
            <v-icon dark="">pan_tool</v-icon>
        </v-btn>
        <v-btn fab="" color="accent">
            <v-icon dark="">check_box_outline_blank</v-icon>
        </v-btn>
        <v-btn fab="" color="accent">
            <v-icon dark="">radio_button_unchecked</v-icon>
        </v-btn>
        <v-btn fab="" color="accent">
            <v-icon dark="">details</v-icon>
        </v-btn>
        <v-btn fab="" color="accent">
            <v-icon dark="">edit</v-icon>
        </v-btn>
        <v-btn fab="" color="accent">
            <v-icon dark="">delete</v-icon>
        </v-btn>
        <v-btn fab="" color="accent">
            <v-icon dark="">add_a_photo</v-icon>
        </v-btn>
        <v-btn fab="" color="primary" disabled="true" class="ml-4">
            <v-icon dark="">replay</v-icon>
        </v-btn>
        <v-btn fab="" color="primary" disabled="true">
            <v-icon dark="" class="flipy">replay</v-icon>
        </v-btn>
    </div>
    <div class="graphic"><svg width="100%" height="100%"><g transform="translate(0,0)scale(1)"> </g></svg></div>
    <app-upload-picture></app-upload-picture> <input type="file" accept="image/*" style="display: none;"></v-container>
`;

exports[`Page renders svg with allItems = circle 1`] = `
<v-container fluid="">
    <div class="toolbox">
        <v-btn fab="" small="" class="green"></v-btn>
        <v-btn fab="" small="" class="red "></v-btn>
        <v-btn fab="" small="" class="black mr-3"></v-btn>
        <v-btn fab="" color="accent">
            <v-icon dark="" class="flipy">call_made</v-icon>
        </v-btn>
        <v-btn fab="" color="accent">
            <v-icon dark="">pan_tool</v-icon>
        </v-btn>
        <v-btn fab="" color="accent">
            <v-icon dark="">check_box_outline_blank</v-icon>
        </v-btn>
        <v-btn fab="" color="accent">
            <v-icon dark="">radio_button_unchecked</v-icon>
        </v-btn>
        <v-btn fab="" color="accent">
            <v-icon dark="">details</v-icon>
        </v-btn>
        <v-btn fab="" color="accent">
            <v-icon dark="">edit</v-icon>
        </v-btn>
        <v-btn fab="" color="accent">
            <v-icon dark="">delete</v-icon>
        </v-btn>
        <v-btn fab="" color="accent">
            <v-icon dark="">add_a_photo</v-icon>
        </v-btn>
        <v-btn fab="" color="primary" disabled="true" class="ml-4">
            <v-icon dark="">replay</v-icon>
        </v-btn>
        <v-btn fab="" color="primary" disabled="true">
            <v-icon dark="" class="flipy">replay</v-icon>
        </v-btn>
    </div>
    <div class="graphic"><svg width="100%" height="100%"><g transform="translate(0,0)scale(1)"><circle cx="50" cy="20" r="40" iid="0" class="item-normal"></circle> </g></svg></div>
    <app-upload-picture></app-upload-picture> <input type="file" accept="image/*" style="display: none;"></v-container>
`;
